# Prueba-AI-Full-Stack

./: README.md  fase1.md  fase2.md  fase3.md  fase4.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Header.tsx  TicketCard.tsx  TicketList.tsx
n8n/: AI-Powered Support Co-Pilot Workflow.json
python-api/: Dockerfile  pyproject.toml  requirements.txt  vercel.json
python-api/api/: main.py
supabase/: setup.sql
