[project]
name = "python-api"
version = "0.1.0"
description = "AI Support Co-Pilot API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "uvicorn>=0.27.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "supabase>=2.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"